# tiny-monitor

./: .gitignore  BRANDING.md  NOTICE  README.md  build.sh
.github/: dependabot.yml
.github/workflows/: ci-develop.yml  ci-main.yml  ci-tag.yml  dependency-review.yml
LICENSES/: Apache-2.0.txt
analysis/: tinymonitorplot.ipynb
backend/: README.md
backend/backapp/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/backapp/migrations/: env.py
backend/backapp/migrations/versions/: 13fc49f28b6b_create_hosts_projects_project_hosts_.py
backend/backapp/src/app/: main.py
backend/backapp/src/app/api/v1/endpoints/: health.py
backend/backapp/src/app/core/: config.py
backend/backapp/src/app/db/: session.py
backend/backapp/src/app/db/models/: __init__.py  host.py  project.py  project_host.py
backend/backapp/tests/: test_health.py
documents/: README.md
documents/frontend/: eslinter.md
frontend/: README.md
frontend/showapp/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/showapp/src/: main.tsx
frontend/showapp/src/app/: App.tsx
frontend/showapp/src/app/layouts/: AppLayout.tsx
frontend/showapp/src/app/router/: index.tsx
frontend/showapp/src/entities/host-metric/: index.ts
frontend/showapp/src/entities/server/: index.ts
frontend/showapp/src/features/metrics-filters/: index.ts
frontend/showapp/src/features/server-scope-filters/: index.ts
monitor/: README.md  dockermonitor.sh  servermonitor.sh  tinymonitor.sh
monitor/lib/: dockermonitor.sh  header.sh  hostmonitor.sh  procmonitor.sh  servermonitor.sh
monitor/lib/utils/: header.sh  logger.sh
monitor/service/: tinymonitor.service  tinymonitor.timer
monitor/utils/: header.sh
plotapp/: README.md  pyproject.toml
plotapp/src/: README.md
plotapp/src/app/: main.py
plotapp/src/app/analysis/: analysis.py
plotapp/src/app/api/v1/: __init__.py
plotapp/src/app/api/v1/endpoints/: __init__.py
plotapp/src/app/core/: config.py
plotapp/src/app/static/: main.js
plotapp/src/app/static/templates/: index.html
var/env/: .env.tinymonitor
var/log/: 2025-08-12_host_tinymonitor.csv
(+32 files in other folders)
